@@ -79,7 +79,7 @@
 #define FEATURE_INCORRECT_LENGTH_INDICATION_SUPPRESSION
 #define FEATURE_INTEGRATED_3270_CONSOLE
 //#define FEATURE_INTEGRATED_ASCII_CONSOLE
-//#define FEATURE_INTERLOCKED_ACCESS_FACILITY                     /*810*/
+#define FEATURE_INTERLOCKED_ACCESS_FACILITY                     /*810*/
 #define FEATURE_INTERPRETIVE_EXECUTION
 #define FEATURE_IO_ASSIST
 #define FEATURE_LINKAGE_STACK
