@@ -794,6 +794,7 @@ is <A HREF="http://www.linuxvm.org/">http://www.linuxvm.org/</A>
 <li>Configuration-Topology Facility
 <li>HFP-Unnormalized-Extensions Facility
 <li>High-Word Facility
+<li>Interlocked-Access Facility
 <li>Load/Store-on-Condition Facility
 <li>Distinct-Operands Facility
 <li>Population-Count Facility
@@ -808,7 +809,6 @@ is <A HREF="http://www.linuxvm.org/">http://www.linuxvm.org/</A>
 <li>Set-Program-Parameter Facility
 <li>CPU-Measurement Counter Facility
 <li>CPU-Measurement Sampling Facility
-<li>Interlocked-Access Facility
 <li>Floating-Point-Extension Facility
 <li>Message-Security-Assist Extension 3
 <li>Message-Security-Assist Extension 4
