@@ -1,3 +1,4 @@
+20 Aug 2010 Interlocked-Access Facility - Roger Bowler
 16 Aug 2010 Deprecate s37x statement. Use "ldmod s37x" instead - Ivan Warren
 11 Aug 2010 Enhance IPL command adding loadparm option. - Paul Gorlinsky
 11 Aug 2010 High-Word Facility - Roger Bowler
